fix layout bug of flickering tooltips at google charts #232062364971772

--- a/src/TrueOrFalse.Frontend.Web/Style/site.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/site.less
@@ -28,6 +28,7 @@
         Tooltips
         Icons
         Dropdowns
+        Google Chart Custom Layout
 
 [Imports:]
 --------------------------------------------------------*/
@@ -1171,7 +1172,27 @@ ul.AlignDdRight{
     }
 }
 
+/*Google Chart Custom Layout*/
 
+div.google-visualization-tooltip { 
+    pointer-events: none;
+    height: auto !important;
+    width: auto !important;
+    padding: 5px;
+}
+
+ul.google-visualization-tooltip-item-list {
+    margin: 0;
+}
+
+li.google-visualization-tooltip-item {
+    margin: 0 !important;
+    padding: 0px;
+}
+
+li.google-visualization-tooltip-item span {
+    font-size: 12px !important;
+}
 
 
 /* $ToDo: Clean up
